<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainActivity.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="@string/app_name"
            android:background="@color/purple_700"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:text="@string/covid_19_cases_in_indonesia"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_16sdp"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/toolbar_main"
            tools:layout_editor_absoluteX="-45dp" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart">
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/confirmed"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/death"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/recovered"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/confirmed_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/confirmed_yellow"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/death_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/death_red"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/recovered_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/recovered_green"
                    android:textSize="@dimen/_12sdp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/text_chart1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="mask data in the last 12 hours"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/table"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/text_chart1">

        </com.github.mikephil.charting.charts.LineChart>

        <Button
            android:id="@+id/datePickerButton"
            android:layout_width="@dimen/_112sdp"
            android:layout_height="wrap_content"
            android:text="@string/jan_01_2020"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            style="?android:spinnerStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_chart1"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:onClick="openDatePicker"
            />
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/datePickerButton">
        </com.github.mikephil.charting.charts.LineChart>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
